--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.1",
     "hardhat": "^2.4.3",
-    "hardhat-abi-exporter": "^2.2.1"
+    "hardhat-abi-exporter": "^2.2.1",
+    "ts-node": "^10.1.0"
   }
 }
